<resources>
    <string name="app_name">GAME</string>
    <string name="overview">Overview</string>
    <string name="defaultimage">defaultImage</string>
    <string name="button2">Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_bar">STATUS BAR</string>
    <string name="health">Health:</string>
    <string name="showhp">showhp</string>
    <string name="showcash">showcash</string>
    <string name="showmass">showmass</string>
    <string name="mass">Mass:</string>
    <string name="cash">Cash:</string>
    <string name="status">Status:</string>
    <string name="showid">showid</string>
    <string name="restart">RESTART</string>
    <string name="area_information">Area Information</string>
    <string name="location">Location:</string>
    <string name="area_description">Area Description:</string>
    <string name="showlocation">showlocation</string>
    <string name="inputdesc">inputDesc</string>
    <string name="star_area">Star Area</string>
    <string name="type_a_string_area_description">type a @string/area_description</string>
    <string name="edit">Edit</string>
    <string name="up">^</string>
    <string name="down">v</string>
    <string name="right"><![CDATA[>]]></string>
    <string name="left"><![CDATA[<]]></string>
    <string name="exception_message">must implement FragmentInteractListener</string>
    <string name="title">title</string>
    <string name="rtitle2">rtitle2</string>
    <string name="rtitle1">rtitle1</string>
    <string name="r1text">r1text</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="smell_o_scope">Smell-O-Scope</string>
    <string name="back">BACK</string>
    <string name="list_of_nearby_items">List of Nearby Items!</string>
    <string name="r3text2">r3text2</string>
    <string name="r3text">r3text</string>
    <string name="option">OPTION</string>
</resources>
